late-night fix to hopefully work on mobile

--- a/style.css
+++ b/style.css
@@ -30,3 +30,6 @@
     line-height: 1.2em;
 }
 
+#space-holder {
+    height: 22%;
+}
